[gd_scene load_steps=6 format=4 uid="uid://b0livp60bisfo"]

[ext_resource type="TileSet" uid="uid://bk1ere21h4285" path="res://Tileset/Menus.tres" id="1_2ksgu"]
[ext_resource type="Script" uid="uid://b0kjaiaw0tt0l" path="res://Scripts/Menu/options_menu.gd" id="1_qjo47"]
[ext_resource type="Texture2D" uid="uid://dm4ejufaxy62s" path="res://Graphics/Menus/MiniCharacters.png" id="3_6udcv"]
[ext_resource type="Theme" uid="uid://b5b5ux4822p0m" path="res://Resources/Standard_Font.tres" id="3_pjmsk"]
[ext_resource type="AudioStream" uid="uid://uay8t1b3i1hi" path="res://Audio/SFX/Gimmicks/s2br_Switch.wav" id="5_pyoer"]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_qjo47")

[node name="UI" type="CanvasLayer" parent="."]
layer = -1

[node name="Backdrop" type="Parallax2D" parent="UI"]
scroll_scale = Vector2(0, 0)
repeat_size = Vector2(192, 0)
repeat_times = 8

[node name="Back" type="TileMapLayer" parent="UI/Backdrop"]
use_parent_material = true
tile_map_data = PackedByteArray("AAADAAAAAAAAAAAAAAADAAEAAAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAIAAAAFAAAAAAAAAAIAAAAFAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAAAAAIAAAACAAAAAAAAAAIAAAACAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAIAAAACAAIAAAAAAAIAAAACAAMAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAEAAAAEAAIAAAAAAAEAAAAEAAMAAAAAAAIAAAAFAAIAAAAAAAIAAAAFAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAIAAAACAAQAAAAAAAIAAAACAAUAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAIAAAAFAAQAAAAAAAIAAAAFAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAEAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAIAAAAFAAYAAAAAAAIAAAAFAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAEAAAABAAgAAAAAAAEAAAABAAkAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAEAAAAEAAgAAAAAAAEAAAAEAAkAAAAAAAIAAAAFAAgAAAAAAAIAAAAFAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAIAAAACAAoAAAAAAAIAAAACAAsAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAsAAAAAAAIAAAAFAAoAAAAAAAIAAAAFAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAIAAAACAAwAAAAAAAIAAAACAA0AAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAEAAAAEAAwAAAAAAAEAAAAEAA0AAAAAAAIAAAAFAAwAAAAAAAIAAAAFAA0AAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAEAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAEAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAAAAAIAAAAHAAIAAAAAAAEAAAAHAAMAAAAAAAIAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAIAAAAHAAgAAAAAAAEAAAAHAAkAAAAAAAIAAAAHAAoAAAAAAAEAAAAHAAsAAAAAAAIAAAAHAAwAAAAAAAEAAAAHAA0AAAAAAAIAAAAIAAAAAAAAAAIAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAIAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAIAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAIAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAIAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAIAAAAIAA0AAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAEAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAEAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAEAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAEAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAEAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAEAAAAKAAAAAAAAAAEAAAAKAAEAAAAAAAIAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAIAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAIAAAAKAAYAAAAAAAEAAAAKAAcAAAAAAAIAAAAKAAgAAAAAAAEAAAAKAAkAAAAAAAIAAAAKAAoAAAAAAAEAAAAKAAsAAAAAAAIAAAAKAAwAAAAAAAEAAAAKAA0AAAAAAAIAAAALAAAAAAAAAAIAAAALAAEAAAAAAAAAAAALAAIAAAAAAAIAAAALAAMAAAAAAAAAAAALAAQAAAAAAAIAAAALAAUAAAAAAAAAAAALAAYAAAAAAAIAAAALAAcAAAAAAAAAAAALAAgAAAAAAAIAAAALAAkAAAAAAAAAAAALAAoAAAAAAAIAAAALAAsAAAAAAAAAAAALAAwAAAAAAAIAAAALAA0AAAAAAAAAAAA=")
tile_set = ExtResource("1_2ksgu")

[node name="Labels" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="OptionsMenu" type="RichTextLabel" parent="UI/Labels"]
layout_mode = 0
offset_left = -76.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 216.0
theme = ExtResource("3_pjmsk")
bbcode_enabled = true
text = "Player Select

Sound

Music

Aspect Ratio

Scale

FullscreenZz

Controls

Back to Title"
scroll_active = false
autowrap_mode = 0

[node name="CharacterOrigin" type="Node2D" parent="UI/Labels"]
position = Vector2(52, 16)

[node name="Sonic" type="Sprite2D" parent="UI/Labels/CharacterOrigin"]
z_index = 3
position = Vector2(8, 0)
texture = ExtResource("3_6udcv")
hframes = 2
vframes = 8
region_rect = Rect2(731, 9, 24, 40)
region_filter_clip_enabled = true

[node name="Tails" type="Sprite2D" parent="UI/Labels/CharacterOrigin"]
z_index = 2
position = Vector2(-8, 0)
texture = ExtResource("3_6udcv")
hframes = 2
vframes = 8
frame = 2

[node name="Knuckles" type="Sprite2D" parent="UI/Labels/CharacterOrigin"]
visible = false
z_index = 3
texture = ExtResource("3_6udcv")
hframes = 2
vframes = 8
frame = 4
region_rect = Rect2(402, 468, 38, 36)

[node name="Amy" type="Sprite2D" parent="UI/Labels/CharacterOrigin"]
visible = false
z_index = 3
texture = ExtResource("3_6udcv")
hframes = 2
vframes = 8
frame = 6
region_rect = Rect2(488, 8, 32, 40)

[node name="Cover" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="Back" type="ColorRect" parent="Cover"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)

[node name="Switch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pyoer")
bus = &"SFX"

[node name="MenuMusicVolume" type="AudioStreamPlayer" parent="."]
bus = &"Music"
